--- a/Bil.html
+++ b/Bil.html
@@ -66,6 +66,7 @@
    });
     </script>
   </head>
+  <link rel="icon" href="assets/bilZn.svg">
   <body>
     <body id="body-pd">
         <header class="header" id="header">
