--- a/CMI.html
+++ b/CMI.html
@@ -66,6 +66,7 @@
    });
     </script>
   </head>
+  <link rel="icon" href="assets/cmiZn.svg">
   <body>
     <body id="body-pd">
         <header class="header" id="header">
