--- a/Mol.html
+++ b/Mol.html
@@ -65,6 +65,7 @@
     // Your code to run since DOM is loaded and ready
    });
     </script>
+    <link rel="icon" href="assets/molZn.svg">
   </head>
   <body>
     <body id="body-pd">
