--- a/Nab.html
+++ b/Nab.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Быль</title>
+    <title>Набережная</title>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-event-set-component@5/dist/aframe-event-set-component.min.js"></script>
     <script src="https://unpkg.com/aframe-layout-component@5.3.0/dist/aframe-layout-component.min.js"></script>
@@ -87,12 +87,12 @@
         <div class="height-100 bg-light">
             <a-scene>
       <a-assets>
-        <img id="one" crossorigin="anonymous" src="assets/bill1.jpg">
-        <img id="two" crossorigin="anonymous" src="assets/bill2.jpg">
-        <img id="three" crossorigin="anonymous" src="assets/bill3.jpg">
-        <img id="one-thumb" crossorigin="anonymous" src="assets/bill1.jpg">
-        <img id="two-thumb" crossorigin="anonymous" src="assets/bill2.jpg">
-        <img id="three-thumb" crossorigin="anonymous" src="assets/bill3.jpg">
+        <img id="one" crossorigin="anonymous" src="assets/Nab/one.jpg">
+        <img id="two" crossorigin="anonymous" src="assets/Nab/two.jpg">
+        <img id="three" crossorigin="anonymous" src="assets/Nab/three.jpg">
+        <img id="one-thumb" crossorigin="anonymous" src="assets/Nab/one.jpg">
+        <img id="two-thumb" crossorigin="anonymous" src="assets/Nab/two.jpg">
+        <img id="three-thumb" crossorigin="anonymous" src="assets/Nab/three.jpg">
 
         
       </a-assets>
