--- a/Nab.html
+++ b/Nab.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Набережная</title>
+    <title>Быль</title>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-event-set-component@5/dist/aframe-event-set-component.min.js"></script>
     <script src="https://unpkg.com/aframe-layout-component@5.3.0/dist/aframe-layout-component.min.js"></script>
@@ -90,9 +90,13 @@
         <img id="one" crossorigin="anonymous" src="assets/Nab/one.jpg">
         <img id="two" crossorigin="anonymous" src="assets/Nab/two.jpg">
         <img id="three" crossorigin="anonymous" src="assets/Nab/three.jpg">
+        <img id="four" crossorigin="anonymous" src="assets/Nab/four.jpg">
+        <img id="five" crossorigin="anonymous" src="assets/Nab/five.jpg">
         <img id="one-thumb" crossorigin="anonymous" src="assets/Nab/one.jpg">
         <img id="two-thumb" crossorigin="anonymous" src="assets/Nab/two.jpg">
         <img id="three-thumb" crossorigin="anonymous" src="assets/Nab/three.jpg">
+        <img id="four-thumb" crossorigin="anonymous" src="assets/Nab/four.jpg">
+        <img id="five-thumb" crossorigin="anonymous" src="assets/Nab/five.jpg">
 
         
       </a-assets>
@@ -103,10 +107,12 @@
              animation__fadeback="property: components.material.material.color; type: color; from: #000; to: #FFF; dur: 300; startEvents: animationcomplete__fade"></a-sky>
 
       <!-- Image links. -->
-      <a-entity id="links" layout="type: line; margin: 1.5" position="0 -1 -4">
+      <a-entity id="links" layout="type: line; margin: 1.5" position="0 -1 -4 -7 -10">
         <a-entity template="src: #link" data-src="#one" data-thumb="#one-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#two" data-thumb="#two-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#three" data-thumb="#three-thumb"></a-entity>
+        <a-entity template="src: #link" data-src="#four" data-thumb="#four-thumb"></a-entity>
+        <a-entity template="src: #link" data-src="#five" data-thumb="#five-thumb"></a-entity>
       </a-entity>
       <!-- Camera + cursor. -->
       <a-entity camera look-controls>
