--- a/Nab.html
+++ b/Nab.html
@@ -91,12 +91,10 @@
         <img id="two" crossorigin="anonymous" src="assets/Nab/two.jpg">
         <img id="three" crossorigin="anonymous" src="assets/Nab/three.jpg">
         <img id="four" crossorigin="anonymous" src="assets/Nab/four.jpg">
-        <img id="five" crossorigin="anonymous" src="assets/Nab/five.jpg">
         <img id="one-thumb" crossorigin="anonymous" src="assets/Nab/one.jpg">
         <img id="two-thumb" crossorigin="anonymous" src="assets/Nab/two.jpg">
         <img id="three-thumb" crossorigin="anonymous" src="assets/Nab/three.jpg">
         <img id="four-thumb" crossorigin="anonymous" src="assets/Nab/four.jpg">
-        <img id="five-thumb" crossorigin="anonymous" src="assets/Nab/five.jpg">
 
         
       </a-assets>
@@ -107,12 +105,11 @@
              animation__fadeback="property: components.material.material.color; type: color; from: #000; to: #FFF; dur: 300; startEvents: animationcomplete__fade"></a-sky>
 
       <!-- Image links. -->
-      <a-entity id="links" layout="type: line; margin: 1.5" position="4 1 0">
+      <a-entity id="links" layout="type: line; margin: 1.5" position="0 -1 -3 -6">
         <a-entity template="src: #link" data-src="#one" data-thumb="#one-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#two" data-thumb="#two-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#three" data-thumb="#three-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#four" data-thumb="#four-thumb"></a-entity>
-        <a-entity template="src: #link" data-src="#five" data-thumb="#five-thumb"></a-entity>
       </a-entity>
       <!-- Camera + cursor. -->
       <a-entity camera look-controls>
