--- a/Nab.html
+++ b/Nab.html
@@ -106,12 +106,10 @@
              animation__fadeback="property: components.material.material.color; type: color; from: #000; to: #FFF; dur: 300; startEvents: animationcomplete__fade"></a-sky>
 
       <!-- Image links. -->
-      <a-entity id="links" layout="type: line; margin: 1.5" position="0 -1 -2 -3 -4">
+      <a-entity id="links" layout="type: line; margin: 1.5" position="0 -1 -2 ">
         <a-entity template="src: #link" data-src="#one" data-thumb="#one-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#two" data-thumb="#two-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#three" data-thumb="#three-thumb"></a-entity>
-        <a-entity template="src: #link" data-src="#four" data-thumb="#four-thumb"></a-entity>
-        <a-entity template="src: #link" data-src="#five" data-thumb="#five-thumb"></a-entity>
       </a-entity>
       <!-- Camera + cursor. -->
       <a-entity camera look-controls>
