--- a/Nab.html
+++ b/Nab.html
@@ -110,6 +110,8 @@
         <a-entity template="src: #link" data-src="#one" data-thumb="#one-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#two" data-thumb="#two-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#three" data-thumb="#three-thumb"></a-entity>
+        <a-entity template="src: #link" data-src="#four" data-thumb="#four-thumb"></a-entity>
+        <a-entity template="src: #link" data-src="#five" data-thumb="#five-thumb"></a-entity>
       </a-entity>
       <!-- Camera + cursor. -->
       <a-entity camera look-controls>
