--- a/Log.html
+++ b/Log.html
@@ -87,16 +87,16 @@
         <div class="height-100 bg-light">
             <a-scene>
       <a-assets>
-        <img id="one" crossorigin="anonymous" src="assets/Nab/one.jpg">
-        <img id="two" crossorigin="anonymous" src="assets/Nab/two.jpg">
-        <img id="three" crossorigin="anonymous" src="assets/Nab/three.jpg">
-        <img id="four" crossorigin="anonymous" src="assets/Nab/four.jpg">
-        <img id="five" crossorigin="anonymous" src="assets/Nab/five.jpg">
-        <img id="one-thumb" crossorigin="anonymous" src="assets/Nab/one.jpg">
-        <img id="two-thumb" crossorigin="anonymous" src="assets/Nab/two.jpg">
-        <img id="three-thumb" crossorigin="anonymous" src="assets/Nab/three.jpg">
-        <img id="four-thumb" crossorigin="anonymous" src="assets/Nab/four.jpg">
-        <img id="five-thumb" crossorigin="anonymous" src="assets/Nab/five.jpg">
+        <img id="one" crossorigin="anonymous" src="assets/Log/one.jpg">
+        <img id="two" crossorigin="anonymous" src="assets/Log/two.jpg">
+        <img id="three" crossorigin="anonymous" src="assets/Log/three.jpg">
+        <img id="four" crossorigin="anonymous" src="assets/Log/four.jpg">
+        <img id="five" crossorigin="anonymous" src="assets/Log/five.jpg">
+        <img id="one-thumb" crossorigin="anonymous" src="assets/Log/one.jpg">
+        <img id="two-thumb" crossorigin="anonymous" src="assets/Log/two.jpg">
+        <img id="three-thumb" crossorigin="anonymous" src="assets/Log/three.jpg">
+        <img id="four-thumb" crossorigin="anonymous" src="assets/Log/four.jpg">
+        <img id="five-thumb" crossorigin="anonymous" src="assets/Log/five.jpg">
         
       </a-assets>
 
