--- a/Log.html
+++ b/Log.html
@@ -92,11 +92,13 @@
         <img id="three" crossorigin="anonymous" src="assets/Log/three.jpg">
         <img id="four" crossorigin="anonymous" src="assets/Log/four.jpg">
         <img id="five" crossorigin="anonymous" src="assets/Log/five.jpg">
+        <img id="six" crossorigin="anonymous" src="assets/Log/six.jpg">
         <img id="one-thumb" crossorigin="anonymous" src="assets/Log/one.jpg">
         <img id="two-thumb" crossorigin="anonymous" src="assets/Log/two.jpg">
         <img id="three-thumb" crossorigin="anonymous" src="assets/Log/three.jpg">
         <img id="four-thumb" crossorigin="anonymous" src="assets/Log/four.jpg">
         <img id="five-thumb" crossorigin="anonymous" src="assets/Log/five.jpg">
+        <img id="six-thumb" crossorigin="anonymous" src="assets/Log/six.jpg">
         
       </a-assets>
 
@@ -112,6 +114,7 @@
         <a-entity template="src: #link" data-src="#three" data-thumb="#three-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#four" data-thumb="#four-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#five" data-thumb="#five-thumb"></a-entity>
+        <a-entity template="src: #link" data-src="#six" data-thumb="#six-thumb"></a-entity>
       </a-entity>
       <!-- Camera + cursor. -->
       <a-entity camera look-controls>
