--- a/Log.html
+++ b/Log.html
@@ -108,7 +108,7 @@
              animation__fadeback="property: components.material.material.color; type: color; from: #000; to: #FFF; dur: 300; startEvents: animationcomplete__fade"></a-sky>
 
       <!-- Image links. -->
-      <a-entity id="links" layout="type: line; margin: 1.5" position="0 -2 -5 ">
+      <a-entity style="left: 100;" id="links" layout="type: line; margin: 1.5" position="0 -2 -5 ">
         <a-entity template="src: #link" data-src="#one" data-thumb="#one-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#two" data-thumb="#two-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#three" data-thumb="#three-thumb"></a-entity>
