--- a/Victory.html
+++ b/Victory.html
@@ -115,8 +115,8 @@
         <a-entity template="src: #link" data-src="#three" data-thumb="#three-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#four" data-thumb="#four-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#five" data-thumb="#five-thumb"></a-entity>
-        <a-entity template="src: #link" data-src="#five" data-thumb="#six-thumb"></a-entity>
-        <a-entity template="src: #link" data-src="#five" data-thumb="#seven-thumb"></a-entity>
+        <a-entity template="src: #link" data-src="#six" data-thumb="#six-thumb"></a-entity>
+        <a-entity template="src: #link" data-src="#seven" data-thumb="#seven-thumb"></a-entity>
       </a-entity>
       <!-- Camera + cursor. -->
       <a-entity camera look-controls>
