--- a/CMI-PL.html
+++ b/CMI-PL.html
@@ -109,7 +109,7 @@
              animation__fadeback="property: components.material.material.color; type: color; from: #000; to: #FFF; dur: 300; startEvents: animationcomplete__fade"></a-sky>
 
       <!-- Image links. -->
-      <a-entity style="right: -300px;" id="links" layout="type: line; margin: 1.5" position="0 -2 -5 ">
+      <a-entity style="right: -300px; margin-right: 100px;" id="links" layout="type: line; margin: 1.5" position="0 -2 -5 ">
         <a-entity template="src: #link" data-src="#one" data-thumb="#one-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#two" data-thumb="#two-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#three" data-thumb="#three-thumb"></a-entity>
