--- a/Nab.html
+++ b/Nab.html
@@ -97,6 +97,8 @@
         <img id="three-thumb" crossorigin="anonymous" src="assets/Nab/three.jpg">
         <img id="four-thumb" crossorigin="anonymous" src="assets/Nab/four.jpg">
         <img id="five-thumb" crossorigin="anonymous" src="assets/Nab/five.jpg">
+        <img id="six-thumb" crossorigin="anonymous" src="assets/Nab/six.jpg">
+        <img id="seven-thumb" crossorigin="anonymous" src="assets/Nab/seven.jpg">
         
       </a-assets>
 
@@ -106,12 +108,14 @@
              animation__fadeback="property: components.material.material.color; type: color; from: #000; to: #FFF; dur: 300; startEvents: animationcomplete__fade"></a-sky>
 
       <!-- Image links. -->
-      <a-entity id="links" layout="type: line; margin: 1.5" position="0 -2 -6 ">
+      <a-entity id="links" layout="type: line; margin: 1.5" position="-4 -2 -6 ">
         <a-entity template="src: #link" data-src="#one" data-thumb="#one-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#two" data-thumb="#two-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#three" data-thumb="#three-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#four" data-thumb="#four-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#five" data-thumb="#five-thumb"></a-entity>
+        <a-entity template="src: #link" data-src="#six" data-thumb="#six-thumb"></a-entity>
+        <a-entity template="src: #link" data-src="#seven" data-thumb="#seven-thumb"></a-entity>
       </a-entity>
       <!-- Camera + cursor. -->
       <a-entity camera look-controls>
