--- a/Log.html
+++ b/Log.html
@@ -93,13 +93,14 @@
         <img id="four" crossorigin="anonymous" src="assets/Log/four.jpg">
         <img id="five" crossorigin="anonymous" src="assets/Log/five.jpg">
         <img id="six" crossorigin="anonymous" src="assets/Log/six.jpg">
+        <img id="seven" crossorigin="anonymous" src="assets/Log/seven.jpg">
         <img id="one-thumb" crossorigin="anonymous" src="assets/Log/one.jpg">
         <img id="two-thumb" crossorigin="anonymous" src="assets/Log/two.jpg">
         <img id="three-thumb" crossorigin="anonymous" src="assets/Log/three.jpg">
         <img id="four-thumb" crossorigin="anonymous" src="assets/Log/four.jpg">
         <img id="five-thumb" crossorigin="anonymous" src="assets/Log/five.jpg">
         <img id="six-thumb" crossorigin="anonymous" src="assets/Log/six.jpg">
-        
+        <img id="seven-thumb" crossorigin="anonymous" src="assets/Log/seven.jpg">
       </a-assets>
 
       <!-- 360-degree image. -->
@@ -108,13 +109,14 @@
              animation__fadeback="property: components.material.material.color; type: color; from: #000; to: #FFF; dur: 300; startEvents: animationcomplete__fade"></a-sky>
 
       <!-- Image links. -->
-      <a-entity style="left: 100;" id="links" layout="type: line; margin: 1.5" position="0 -2 -5 ">
+      <a-entity style="left: 100;" id="links" layout="type: line; margin: 1.5" position="-4 -2 -5 ">
         <a-entity template="src: #link" data-src="#one" data-thumb="#one-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#two" data-thumb="#two-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#three" data-thumb="#three-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#four" data-thumb="#four-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#five" data-thumb="#five-thumb"></a-entity>
         <a-entity template="src: #link" data-src="#six" data-thumb="#six-thumb"></a-entity>
+        <a-entity template="src: #link" data-src="#six" data-thumb="#seven-thumb"></a-entity>
       </a-entity>
       <!-- Camera + cursor. -->
       <a-entity camera look-controls>
