--- a/Nab.html
+++ b/Nab.html
@@ -92,6 +92,8 @@
         <img id="three" crossorigin="anonymous" src="assets/Nab/three.jpg">
         <img id="four" crossorigin="anonymous" src="assets/Nab/four.jpg">
         <img id="five" crossorigin="anonymous" src="assets/Nab/five.jpg">
+        <img id="six" crossorigin="anonymous" src="assets/Nab/six.jpg">
+        <img id="seven" crossorigin="anonymous" src="assets/Nab/seven.jpg">
         <img id="one-thumb" crossorigin="anonymous" src="assets/Nab/one.jpg">
         <img id="two-thumb" crossorigin="anonymous" src="assets/Nab/two.jpg">
         <img id="three-thumb" crossorigin="anonymous" src="assets/Nab/three.jpg">
