--- a/Ataman.html
+++ b/Ataman.html
@@ -80,6 +80,10 @@
                   <a href="Ataman.html" class="nav_link"> <i class='bx bx-grid-alt nav_icon nav_icon'></i> </i><span class="nav_name">Атаманский лес</span> </a>
                   <a href="Mol.html" class="nav_link"> <i class='bx bx-grid-alt nav_icon nav_icon'></i> <span class="nav_name">ЦКР Молодёжный</span> </a>
                   <a href="Bil.html" class="nav_link"> <i class='bx bx-grid-alt nav_icon nav_icon'></i> <span class="nav_name">Быль</span> </a> 
+                  <a href="Victory.html" class="nav_link"> <i class='bx bx-grid-alt nav_icon nav_icon'></i> <span class="nav_name">Площадь победы</span> </a> 
+                  <a href="CMI-PL.html" class="nav_link"> <i class='bx bx-grid-alt nav_icon nav_icon'></i> <span class="nav_name">Площадь ЦМИ</span> </a> 
+                  <a href="Log.html" class="nav_link"> <i class='bx bx-grid-alt nav_icon nav_icon'></i> <span class="nav_name">Зеленый лог</span> </a> 
+                  <a href="Nab.html" class="nav_link"> <i class='bx bx-grid-alt nav_icon nav_icon'></i> <span class="nav_name">Набережная</span> </a> 
             </div> 
         </nav>
         </div>
