--- a/CMI.html
+++ b/CMI.html
@@ -74,9 +74,9 @@
         </header>
         <div class="l-navbar" id="nav-bar">
           <nav class="nav">
-            <div> <a href="#" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">Школа <br>Креативных<br> Индустрий</span> </a>
+            <div> <a href="https://vk.com/shkioskol" class="nav_logo"> <img src="assets/logo 1.svg" width="37px" alt=""> <span class="nav_logo-name">Школа <br>Креативных<br> Индустрий</span> </a>
                 <div class="nav_list"> 
-                  <a href="https://vk.com/shkioskol" class="nav_logo"> <img src="assets/logo 1.svg" width="37px" alt=""> <span class="nav_name">Площадь победы</span> </a>
+                  <a href="Victory.html" class="nav_link"> <i class='bx bx-grid-alt nav_icon nav_icon'></i> <span class="nav_name">Площадь победы</span> </a>
                   <a href="CMI.html" class="nav_link active"> <i class='bx bx-grid-alt nav_icon nav_icon'></i>  <span class="nav_name">ЦМИ</span> </a> 
                   <a href="CMI-PL.html" class="nav_link"> <i class='bx bx-grid-alt nav_icon nav_icon'></i> <span class="nav_name">Площадь ЦМИ</span> </a> 
                   <a href="Log.html" class="nav_link"> <i class='bx bx-grid-alt nav_icon nav_icon'></i> <span class="nav_name">Зеленый лог</span> </a> 
